2002-11-04  Michael Meeks  <michael@ximian.com>

	* samples/controls/bonobo-sample-controls.c
	(bonobo_entry_control_new): do life instrumentation
	on the entry.

	* bonobo/bonobo-control.c:
	(bonobo_control_class_init): added disconnected signal.
	(bonobo_control_life_set_purge): impl.
	(bonobo_control_disconnected): impl.
	(control_frame_connection_died_cb): upd.
	(bonobo_control_unset_control_frame): kill timeout on frame.
	(bonobo_control_construct): setup timeout on construct'n.
	(control_life_idle_cb, control_life_disconnected): impl.
	(bonobo_control_life_instrument): impl.
	(bonobo_control_life_get_count): impl.

2002-11-01  Gustavo Carneiro <gjc@inescporto.pt>

	* bonobo/bonobo-ui-engine.c
	(add_debug_menu): impl.
	(bonobo_ui_engine_construct): do it if
	BONOBO_DEBUG is defined.

2002-11-01  Michael Meeks  <michael@ximian.com>

	* Version 2.1.0

2002-11-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-control-item.c
	(bonobo_ui_toolbar_control_item_construct): upd.
	(bonobo_ui_toolbar_control_item_new_widget): impl.
	clean to allow non-control items.

	* tests/test-ui.c (main): test it.

	* bonobo/bonobo-ui-engine.c
	(bonobo_ui_engine_widget_set): impl helper.

	* bonobo/bonobo-ui-component.c
	(bonobo_ui_component_widget_set): impl. so
	we can do in-proc shortcuts to make theming
	nicer in nautilus / galeon.

2002-10-31  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: require libxml - fixes breakage
	from removing it from bonobo-activation's pkg-config
	requirements.

2002-10-22  Gustavo Carneiro  <gjc@inescporto.pt>

	* doc/ui-faq.txt: add item.

2002-10-18  Michael Meeks  <michael@ximian.com>

	* Version 2.0.3.2

2002-10-17  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar.c (impl_finalize),
	(impl_dispose): unlink widgets we destroy,
	don't free the list until here - otherwise
	we can't remove any widgets as we chain to
	parent (doh) - thanks Jaka / Satyajit

2002-10-08  Michael Meeks  <michael@ximian.com>
